--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@iconify/vue": "^5.0.0",
+    "@vueuse/core": "^14.1.0",
     "ant-design-vue": "~4.2.6",
+    "axios": "^1.13.2",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
