--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@vueuse/core": "^14.1.0",
     "ant-design-vue": "~4.2.6",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
