--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "ant-design-vue": "~4.2.6",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "lodash-es": "^4.17.22",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.25",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.6.3",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vitejs/plugin-vue-jsx": "^5.1.2",
