feat: 修改打包配置

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,54 @@
-server {
-    listen       80;
-    server_name  your-domain.com; # 你的域名
+# 如果这是你的 nginx.conf 主文件，必须保留 http 块
+user  nginx;
+worker_processes  auto;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
-    # 前端静态资源
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html; # 支持 Vue Router 的 history 模式
+events {
+    worker_connections  1024;
+}
+http {
+        include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
+    # 1. 定义后端服务
+    upstream nest-server {  
+        # 注意：你之前 main.ts 监听的是 3006
+        # Docker 内部通信使用容器名
+        server 192.168.1.16:3006; 
     }
 
-    # 1. 后端接口代理 (对应 Vite 中的 /api)
-    location /api/ {
-        proxy_pass http://localhost:3000/; # 注意最后的斜杠，对应 rewrite 逻辑
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    server {
+        listen       80;
+        listen  [::]:80;
+        server_name  localhost;
 
-    # 2. OSS 资源代理 (对应 Vite 中的 /oss-resource)
-    # 彻底解决生产环境的跨域问题，让浏览器认为图片也是同源的
-    location /oss-resource/ {
-        # 将请求转发到阿里云 OSS 域名
-        proxy_pass http://daan-pqf.oss-cn-beijing.aliyuncs.com/; 
-        
-        # 隐藏 OSS 的一些响应头，防止浏览器混淆
-        proxy_hide_header x-oss-request-id;
-        proxy_hide_header x-oss-server-time;
-        
-        # 允许 Nginx 缓存图片以提高性能（可选）
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
+        # 前端静态资源
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # 1. 后端接口代理
+        location /api/ {
+            # 转发到上面的 upstream
+            proxy_pass http://nest-server/; 
+            
+            # 这里的 rewrite 和上面的 proxy_pass 结尾的斜杠选其一即可
+            # 如果 proxy_pass 后面带了 /，Nginx 会自动去除 /api/ 部分
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # 2. OSS 资源代理
+        location /oss-resource/ {
+            proxy_pass http://daan-pqf.oss-cn-beijing.aliyuncs.com/; 
+            proxy_hide_header x-oss-request-id;
+            proxy_hide_header x-oss-server-time;
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+        }
     }
 }
