--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 # 如果这是你的 nginx.conf 主文件，必须保留 http 块
-user  nginx;
+# user  nginx;
+user  root;
 worker_processes  auto;
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
