--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,6 @@ jobs:
         with:
           context: .
           push: true
+          # 增加下面这一行，同时构建 x86 和 ARM 两个版本
+          platforms: linux/amd64,linux/arm64
           tags: daanyayaya/vue3-nest-admin-h5:latest # 替换成你的 Docker Hub 仓库信息
