--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # --- 关键修复 1：安装模拟器，以便在 x86 机器上构建 ARM 镜像 ---
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      # --- 关键修复 2：设置 Buildx 虚拟构建器，解决“driver”不支持多平台的问题 ---
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -22,6 +30,6 @@ jobs:
         with:
           context: .
           push: true
-          # 增加下面这一行，同时构建 x86 和 ARM 两个版本
+          # 这样构建出的镜像同时包含 x86 (电脑) 和 ARM (绿联 NAS) 版本
           platforms: linux/amd64,linux/arm64
-          tags: daanyayaya/vue3-nest-admin-h5:latest # 替换成你的 Docker Hub 仓库信息
+          tags: daanyayaya/vue3-nest-admin-h5:latest
