--- a/nginx.conf
+++ b/nginx.conf
@@ -1,55 +1,104 @@
-# 如果这是你的 nginx.conf 主文件，必须保留 http 块
-# user  nginx;
-user  root;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+# # 如果这是你的 nginx.conf 主文件，必须保留 http 块
+# # user  nginx;
+# user  root;
+# worker_processes  auto;
+# error_log  /var/log/nginx/error.log notice;
+# pid        /var/run/nginx.pid;
 
-events {
-    worker_connections  1024;
+# events {
+#     worker_connections  1024;
+# }
+# http {
+#         include       /etc/nginx/mime.types;
+#         default_type  application/octet-stream;
+#     # 1. 定义后端服务
+#     upstream nest-server {  
+#         # 注意：你之前 main.ts 监听的是 3006
+#         # Docker 内部通信使用容器名
+#         server 192.168.1.16:3006; 
+#     }
+
+#     server {
+#         listen       80;
+#         listen  [::]:80;
+#         server_name  localhost;
+
+#         # 前端静态资源
+#         location / {
+#             root   /usr/share/nginx/html;
+#             index  index.html index.htm;
+#             try_files $uri $uri/ /index.html;
+#         }
+
+#         # 1. 后端接口代理
+#         location /api/ {
+#             # 转发到上面的 upstream
+#             proxy_pass http://nest-server/; 
+            
+#             # 这里的 rewrite 和上面的 proxy_pass 结尾的斜杠选其一即可
+#             # 如果 proxy_pass 后面带了 /，Nginx 会自动去除 /api/ 部分
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+
+#         # 2. OSS 资源代理
+#         location /oss-resource/ {
+#             proxy_pass http://daan-pqf.oss-cn-beijing.aliyuncs.com/; 
+#             proxy_hide_header x-oss-request-id;
+#             proxy_hide_header x-oss-server-time;
+#             expires 30d;
+#             add_header Cache-Control "public, no-transform";
+#         }
+#     }
+# }
+
+# /上面是正常的ngingx配置，下面是ci/cd的nginx配置# --- 注意：删除了全局块(user, worker_processes, events, http) ---
+
+# 1. 定义后端服务
+upstream nest-server {  
+    # 如果你的 NestJS 容器也在同一台 NAS 上运行
+    # 建议使用 NAS 的内网 IP (192.168.1.16) 是稳妥的做法
+    server 192.168.1.16:3006; 
 }
-http {
-        include       /etc/nginx/mime.types;
-        default_type  application/octet-stream;
-    # 1. 定义后端服务
-    upstream nest-server {  
-        # 注意：你之前 main.ts 监听的是 3006
-        # Docker 内部通信使用容器名
-        server 192.168.1.16:3006; 
+
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
+
+    # 前端静态资源
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        # 解决 Vue/React 路由刷新 404
+        try_files $uri $uri/ /index.html;
     }
 
-    server {
-        listen       80;
-        listen  [::]:80;
-        server_name  localhost;
+    # 1. 后端接口代理
+    location /api/ {
+        # 转发到上面的 upstream
+        proxy_pass http://nest-server/; 
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        # 前端静态资源
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-            try_files $uri $uri/ /index.html;
-        }
+    # 2. OSS 资源代理
+    location /oss-resource/ {
+        proxy_pass http://daan-pqf.oss-cn-beijing.aliyuncs.com/; 
+        proxy_hide_header x-oss-request-id;
+        proxy_hide_header x-oss-server-time;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
 
-        # 1. 后端接口代理
-        location /api/ {
-            # 转发到上面的 upstream
-            proxy_pass http://nest-server/; 
-            
-            # 这里的 rewrite 和上面的 proxy_pass 结尾的斜杠选其一即可
-            # 如果 proxy_pass 后面带了 /，Nginx 会自动去除 /api/ 部分
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # 2. OSS 资源代理
-        location /oss-resource/ {
-            proxy_pass http://daan-pqf.oss-cn-beijing.aliyuncs.com/; 
-            proxy_hide_header x-oss-request-id;
-            proxy_hide_header x-oss-server-time;
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
-        }
+    # 错误页面配置
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
